--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/sebastianmuriel16/curso-api-rest-js-practico/issues"
   },
-  "homepage": "https://github.com/sebastianmuriel16/curso-api-rest-js-practico#readme"
+  "homepage": "https://github.com/sebastianmuriel16/curso-api-rest-js-practico#readme",
+  "dependencies": {
+    "axios": "^1.3.6"
+  }
 }
